# virtual-stack

./: .env.example  .gitignore  Dockerfile  README.md  STATUS.md  alembic.ini  check_db.py  docker-compose.yml  instructions.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-without-reload.sh  run_test.sh  test_functionality.py
.cursor/rules/: backend-python.mdc
alembic/: env.py
alembic/versions/: 20240330_create_api_keys_table.py  20240330_create_iam_schema.py  20240330_create_iam_tables.py  20240330_seed_permissions.py  43ae6a20f723_add_tenant_roles_and_role_permissions_.py  b8f3acf95fa5_seed_initial_admin_user_and_default_.py  e6e7770f7d95_consolidate_iam_schema_to_match_models.py  ef986450914c_add_user_tenant_roles_association_table.py  manual_add_scope_column.py
docs/: README.md  STATUS.md  architecture_approach.md  code_quality.md  core_roadmap.md  instructions.md  openapi_spec.yaml  testing_guide.md
docs/archive/: troubleshooting_log.md
docs/import-fixes/: step7-run.md  steps.md
import-fixes/: README.md  fix_imports.py  quick-fix.md  step1-main.md  step2-api.md  step3-endpoints.md  step4-core-modules.md  step5-schemas.md  step6-services.md  troubleshooting.md
scripts/: check_db_ready.py  lint.sh  run-without-reload.sh  run_dev.sh  run_migrations.sh  run_seed.py  run_worker.sh  seed_initial_data.py  test_api_basic.py  test_user_api.sh
src/virtualstack/: main.py
src/virtualstack/api/: deps.py  middleware.py
src/virtualstack/api/v1/: api.py
src/virtualstack/api/v1/endpoints/: api_keys.py  auth.py  invitations.py  roles.py  tenant_header_roles.py  tenant_header_users.py  tenant_user_management.py  tenants.py  users.py
src/virtualstack/core/: config.py  exceptions.py  permissions.py  rate_limiter.py  security.py
src/virtualstack/db/: base.py  init_db.py  session.py
src/virtualstack/models/: __init__.py  base.py
src/virtualstack/models/iam/: __init__.py  api_key.py  invitation.py  permission.py  role.py  role_permissions.py  tenant.py  tenant_role.py  user.py  user_tenant_role.py
src/virtualstack/schemas/: __init__.py  base.py
src/virtualstack/schemas/iam/: __init__.py  api_key.py  auth.py  invitation.py  permission.py  role.py  tenant.py  user.py
src/virtualstack/services/: __init__.py  base.py
src/virtualstack/services/iam/: __init__.py  api_key.py  invitation.py  permission.py  role.py  tenant.py  user.py
tests/: conftest.py
tests/functional/: test_api_keys.py  test_auth.py  test_health.py  test_invitations.py  test_permission_dependencies.py  test_role_assignments.py  test_roles.py  test_tenants.py  test_users.py
