[tool.poetry]
name = "virtualstack-backend"
version = "0.1.0"
description = "Backend service for VirtualStack - A multi-tenant cloud management platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "virtualstack", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.27"}
alembic = "^1.13.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
celery = "^5.3.6"
redis = "^5.0.1"
pyyaml = "^6.0.1"
httpx = "^0.26.0"
prometheus-fastapi-instrumentator = "^6.1.0"
prometheus-client = "^0.20.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.6"}
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 