[tool.poetry]
name = "virtualstack-backend"
version = "0.1.0"
description = "Backend service for VirtualStack - A multi-tenant cloud management platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "virtualstack", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0" # Kept from pyproject, compatible with >=0.110.0,<0.113.0
uvicorn = {extras = ["standard"], version = ">=0.29.0,<0.31.0"} # Updated from reqs
sqlalchemy = {extras = ["asyncio", "asyncpg"], version = ">=2.0.29,<2.1.0"} # Updated from reqs, merged extras
alembic = "^1.13.1" # Kept from pyproject, compatible with >=1.13.1,<1.14.0
pydantic = ">=2.6.4,<2.9.0" # Updated from reqs
pydantic-settings = "^2.2.1" # Kept from pyproject, compatible with >=2.2.1,<2.4.0
python-dotenv = "^1.0.1" # Kept from pyproject
passlib = {extras = ["bcrypt"], version = "^1.7.4"} # Kept from pyproject, compatible with >=1.7.4,<1.8.0
python-jose = {extras = ["cryptography"], version = "^3.3.0"} # Kept from pyproject, compatible with >=3.3.0,<3.4.0
celery = "^5.3.6" # Kept from pyproject
redis = {extras = ["hiredis"], version = ">=4.6.0,<6.0.0"} # Updated from reqs, specified version range for clarity
pyyaml = "^6.0.1" # Kept from pyproject
httpx = {extras = ["http2", "brotli"], version = ">=0.27.0,<0.28.0"} # Updated to match dev requirements
prometheus-fastapi-instrumentator = "^6.1.0" # Kept from pyproject
prometheus-client = "^0.20.0" # Kept from pyproject
sentry-sdk = {extras = ["fastapi"], version = "^1.40.6"} # Kept from pyproject
loguru = "^0.7.2" # Kept from pyproject
asyncpg = "^0.30.0" # Kept from pyproject, compatible with >=0.29.0,<0.30.0
email-validator = "^2.2.0" # Kept from pyproject, compatible with >=2.1.1,<2.3.0
python-multipart = "^0.0.20" # Kept from pyproject (newer than reqs)
greenlet = "^3.1.1" # Kept from pyproject

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.1,<8.4.0" # Updated from reqs-dev
pytest-asyncio = ">=0.23.6,<0.27.0" # Updated from reqs-dev
pytest-cov = ">=5.0.0,<6.0.0" # Updated from reqs-dev
black = "^24.2.0" # Kept from pyproject
isort = "^5.13.2" # Kept from pyproject
flake8 = "^7.0.0" # Kept from pyproject
mypy = "^1.8.0" # Kept from pyproject
# httpx is now part of main dependencies with the version required by dev
factory-boy = ">=3.2.0" # Added from reqs-dev, updated version constraint
ruff = ">=0.4.2,<0.6.0" # Added from reqs-dev

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "A",
    "COM",
    "D",
    "UP",
    "N",
    "S",
    "BLE",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "PYI"
]
ignore = [
    "E501",
    "B008",
    "C901",
    "COM812",
    "D100",
    "D104",
    "D107",
    "S101",
    "PLR2004",
    "PLR0913",
    "PGH003",
    "F811",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "S101", "T201", "TCH001", "TCH002", "TCH003", "PLR2004", "ARG001"]
"tests/functional/test_auth.py" = ["S105"]
"src/virtualstack/models/iam/__init__.py" = ["F401"]
"src/virtualstack/services/iam/__init__.py" = ["F401"]
"src/virtualstack/services/iam/role.py" = ["ARG002"]
"src/virtualstack/api/v1/endpoints/__init__.py" = ["F401"]
"src/virtualstack/schemas/iam/__init__.py" = ["F401"]
"alembic/versions/*.py" = ["D100", "D101", "D102", "D103", "D104"]
"src/virtualstack/api/v1/endpoints/invitations.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["virtualstack"]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google" 